--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -1,2 +1,10 @@
 ﻿#configure_file ("levels.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 #configure_file ("level1.txt" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("GeometryDashMenuTheme.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Box.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Help.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Menu_Backgound.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Play.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Title.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Authors.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Score_Table.png" ${CMAKE_BINARY_DIR} COPYONLY)
