--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -8,3 +8,5 @@ configure_file ("Play.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Title.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Authors.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Score_Table.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Floor.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PlayerBox.png" ${CMAKE_BINARY_DIR} COPYONLY)
