--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -10,3 +10,5 @@ configure_file ("Authors.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Score_Table.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Floor.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("PlayerBox.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Map.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Spike.png" ${CMAKE_BINARY_DIR} COPYONLY)
