--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -12,3 +12,12 @@ configure_file ("Floor.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("PlayerBox.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Map.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Spike.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Coin.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Cube1.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Cube2.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("CubeCube.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Gate1.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Gate2.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Gate3.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Gate4.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Gate5.png" ${CMAKE_BINARY_DIR} COPYONLY)
