--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -21,3 +21,4 @@ configure_file ("Gate2.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Gate3.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Gate4.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Gate5.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Bigfloor.png" ${CMAKE_BINARY_DIR} COPYONLY)
