--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -11,7 +11,7 @@ configure_file ("Score_Table.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Floor.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("PlayerBox.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Map.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("Spike.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Spike1.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Coin.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Cube1.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Cube2.png" ${CMAKE_BINARY_DIR} COPYONLY)
@@ -21,4 +21,10 @@ configure_file ("Gate2.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Gate3.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Gate4.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Gate5.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("Bigfloor.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Jumper1.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Jumper2.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Jumper3.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Jumper4.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Rectangle.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PlayerShip.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Spike2.png" ${CMAKE_BINARY_DIR} COPYONLY)
