--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -28,3 +28,6 @@ configure_file ("Jumper4.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Rectangle.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("PlayerShip.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Spike2.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("OhNo.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Instructions1.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("DropTheMic.png" ${CMAKE_BINARY_DIR} COPYONLY)
