--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -31,3 +31,9 @@ configure_file ("Spike2.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("OhNo.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Instructions1.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("DropTheMic.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("BoxShip1.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("BoxShip2.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("BoxShip3.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("BoxShip4.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("BoxShip5.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("BoxShip6.png" ${CMAKE_BINARY_DIR} COPYONLY)
