--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -37,3 +37,4 @@ configure_file ("BoxShip3.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BoxShip4.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BoxShip5.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BoxShip6.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Spikes.png" ${CMAKE_BINARY_DIR} COPYONLY)
