--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -9,7 +9,12 @@ configure_file ("Title.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Authors.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Score_Table.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Floor.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("PlayerBox.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PlayerBox1.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PlayerBox2.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PlayerBox3.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PlayerBox4.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PlayerBox5.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PlayerBox6.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Map.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Spike1.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Coin.png" ${CMAKE_BINARY_DIR} COPYONLY)
@@ -26,7 +31,12 @@ configure_file ("Jumper2.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Jumper3.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Jumper4.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Rectangle.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("PlayerShip.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PlayerShip1.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PlayerShip2.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PlayerShip3.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PlayerShip4.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PlayerShip5.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("PlayerShip6.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Spike2.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("OhNo.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Instructions1.png" ${CMAKE_BINARY_DIR} COPYONLY)
