--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -48,4 +48,5 @@ configure_file ("BoxShip4.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BoxShip5.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BoxShip6.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Spikes.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Spikesss.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("EnemySpriteSheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
