--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -49,6 +49,7 @@ configure_file ("BoxShip5.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BoxShip6.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Spikes.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("EnemiesSpritesheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("EnemiesSpritesheetttt.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Echo.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Greyhound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("OnlyTheHorses.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
