--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -48,9 +48,10 @@ configure_file ("BoxShip4.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BoxShip5.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BoxShip6.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Spikes.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("EnemiesSpritesheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("EnemiesSpritesheetttt.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Enemy1SpriteSheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Enemy2SpriteSheet.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Enemy1.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Enemy2.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Echo.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Greyhound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("OnlyTheHorses.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
