--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -1,6 +1,5 @@
 ﻿#configure_file ("levels.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 #configure_file ("level1.txt" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("GeometryDashMenuTheme.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Box.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Help.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Menu_Backgound.png" ${CMAKE_BINARY_DIR} COPYONLY)
@@ -15,7 +14,10 @@ configure_file ("PlayerBox3.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("PlayerBox4.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("PlayerBox5.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("PlayerBox6.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("Map.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Map1.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Map2.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Map3.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Map4.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Spike1.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Coin.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Cube1.png" ${CMAKE_BINARY_DIR} COPYONLY)
@@ -40,6 +42,8 @@ configure_file ("PlayerShip6.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Spike2.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("OhNo.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Instructions1.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Instructions2.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Instructions3.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("DropTheMic.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BoxShip1.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BoxShip2.png" ${CMAKE_BINARY_DIR} COPYONLY)
@@ -57,3 +61,7 @@ configure_file ("Greyhound.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("OnlyTheHorses.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Spectre.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("WithoutYou.ogg" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("OnlyTheHorses.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Greyhound.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Spectre.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("WithoutYou.png" ${CMAKE_BINARY_DIR} COPYONLY)
