--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -63,3 +63,4 @@ configure_file ("Greyhound.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Spectre.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("WithoutYou.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("ScoreBoard.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("scores.txt" ${CMAKE_BINARY_DIR} COPYONLY)
