--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -41,6 +41,7 @@ configure_file ("OhNo.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Instructions1.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Instructions2.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Instructions3.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Instructions4.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("DropTheMic.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BoxShip1.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("BoxShip2.png" ${CMAKE_BINARY_DIR} COPYONLY)
