--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -2,7 +2,7 @@
 #configure_file ("level1.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Box.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Help.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("Menu_Backgound.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Menu_Background.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Play.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Title.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Score_Table.png" ${CMAKE_BINARY_DIR} COPYONLY)
